Corriendo servidor non-rest (build, ejecución y pruebas con PostMan)